Fixed issue with making headers sticky and stopping shadows from showing between column gaps

--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@
 
   /* This works because of CSS Cascading nature - when .dark gets applied on the root it replace all the custom properties with this one */
   .dark {
-    --background: 237 100% 4;
+    --background: 237 100% 4%;
     --foreground: 216 15% 57%;
 
     --card: 222.2 84% 4.9%;
@@ -74,7 +74,7 @@
 
     --border: 235 12% 27%;
     --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --ring: 242 48% 58%;
   }
 }
 
